# numpy-grover

./: LICENSE  README.md  examples.py  pyproject.toml
numpy_grover/: __init__.py  core.py
tests/: test_core.py
